<resources>
    <string name="app_name">TiendaVirtual</string>
    <string name="name">Nombre</string>
    <string name="msg_name">Digite el nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="precio">precio</string>
    <string name="url_imagen">Url Imagen</string>
    <string name="digite_la_descripcion">Digite la descripcion</string>
    <string name="ingrese_el_precio">Ingrese el Precio</string>
    <string name="ingrese_la_url">Ingrese la Url</string>
    <string name="agregar">Agregar</string>
    <string name="computador_asus">Computador ASUS</string>
    <string name="_13_000_000_00">$ 13.000.000,00</string>
    <string name="bienvenidos">BIENVENIDOS</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="agregar_categoria">Agregar Categoria</string>
    <string name="nombre">Nombre:</string>
    <string name="ropa">Ropa</string>
    <string name="color">Color:</string>
    <string name="categorias">Categorias</string>
    <string name="agregar_categoria1">Agregar Categoria</string>
    <string name="seleccionar_color">Seleccionar_Color</string>
    <string name="add_categorias">Añadir Categorias</string>
    <string name="crear_categoria">Crear Categoria</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar11">Agregar</string>


</resources>