<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardView"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        android:layout_margin="8dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            >
            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/product_reference" />

            <TextView
                android:id="@+id/tv_name_product_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/computador_asus"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <TextView
                android:id="@+id/tv_name_price_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_13_000_000_00"
                android:textAppearance="?attr/textAppearanceBodyMedium" />

            <Button
                android:id="@+id/button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agregar" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>