<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:cardBackgroundColor="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_image_category"
            android:layout_width="50dp"
            android:layout_height="90dp"
            android:layout_weight="0.2"
            android:scaleType="centerCrop"
            android:src="@drawable/ropa" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ropa" />

            <TextView
                android:id="@+id/color_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_color_category"
                android:layout_width="250dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_weight="10"
                android:backgroundTint="@color/Green"
                app:cardCornerRadius="12dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>